syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "ContentService";

package content_service;

service Content {
  rpc PublishArticle (Article) returns (ContentResponse);
  rpc DeleteArticle (ArticleRequest) returns (ContentResponse);
  rpc UpdateArticle (Article) returns (ContentResponse);
  rpc GetArticle (ArticleRequest) returns (Article);
  rpc GetArticles (None) returns (ArticlesResponse);
  rpc GetCategories (None) returns (Categories);
  rpc UploadDocument (UploadDocumentRequest) returns (UploadDocumentResponse);
  rpc DownloadDocument (DownloadDocumentRequest) returns (DownloadDocumentResponse);
  rpc UploadImage (UploadImageRequest) returns (UploadImageResponse);
  rpc DownloadImage (DownloadImageRequest) returns (DownloadImageResponse);
}

message Article {
	string id = 1;
	string title = 2;
	string author = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp edited_at = 5;
	string last_editor = 6;
	repeated Tag tags = 7;
	Category category = 8;
	string custom_elements = 9;
	string description = 10;
	string file_id = 11;
}

message ArticlesResponse {
	repeated Article articles = 1;
}

message Tag {
	string name = 1;
}

message ContentResponse {
	string message = 1;
}

message ArticleRequest {
	string id = 1;
}

message ArticleUpdateRequest {
	ArticleRequest article = 1;
	Article content = 2;
}

message Category {
	string id = 1;
	string name = 2;
}

message Categories {
	repeated Category category = 1;
}

message None {}

message UploadDocumentRequest {
	bytes file = 1;
}

message UploadDocumentResponse {
	string id = 1;
}

message DownloadDocumentRequest {
	string id = 1;
}

message DownloadDocumentResponse {
	bytes file = 1;
}

message UploadImageRequest {
	bytes image = 1;
}

message UploadImageResponse {
	string id = 1;
}

message DownloadImageRequest {
	string id = 1;
}

message DownloadImageResponse {
	bytes image = 1;
}