syntax = "proto3";

option csharp_namespace = "DatabaseManagementService";

package database;

service DatabaseManagement {
  rpc AddToCollection (AdditionRequest) returns (DatabaseResponse);
  rpc RemoveFromCollection (CollectionRequest) returns (DatabaseResponse);
  rpc GetFromCollection (CollectionRequest) returns (DatabaseResponse);
  rpc UpdateCollection (AdditionRequest) returns (DatabaseResponse);
}

message DatabaseResponse {
	string message = 1;
	MessageType message_type = 2;
}

enum MessageType {
	INFO = 0;
	WARNING = 1;
	ERROR = 2;
}

message AdditionRequest {
	string collection = 1;
	string data_json = 2;
}

message CollectionRequest {
	string collection = 1;
	string criteria_json = 2;
}